[gd_scene load_steps=10 format=1]

[ext_resource path="res://Scenes/items/coin.gd" type="Script" id=1]
[ext_resource path="res://GFX/Items/bronze_1.png" type="Texture" id=2]
[ext_resource path="res://GFX/Items/bronze_2.png" type="Texture" id=3]
[ext_resource path="res://GFX/Items/bronze_3.png" type="Texture" id=4]
[ext_resource path="res://GFX/Items/bronze_4.png" type="Texture" id=5]
[ext_resource path="res://SFX/coin_SFX.wav" type="Sample" id=6]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 42.6153

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SampleLibrary" id=3]

samples/coin = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 6 )
}

[node name="coin" type="Area2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 4
collision/mask = 2
script/script = ExtResource( 1 )

[node name="anim_sprite" type="AnimatedSprite" parent="."]

frames = SubResource( 2 )
animation = "default"

[node name="shape" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="sfx" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 3 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="fx" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="anim_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="body_enter" from="." to="." method="_on_coin_body_enter"]

[connection signal="tween_complete" from="fx" to="." method="_on_fx_tween_complete"]

[connection signal="timeout" from="anim_timer" to="." method="_on_anim_timer_timeout"]


